--- a/scss/card.scss
+++ b/scss/card.scss
@@ -3,6 +3,9 @@
   width: 850px;
   height: 40px;
   margin-bottom: 100px;
+  @media (max-width: 550px) {
+    margin-bottom: 50px;
+  }
 }
 
 .thecard {
