--- a/scss/card.scss
+++ b/scss/card.scss
@@ -1,9 +1,13 @@
 .cardContainer {
   position: relative;
-  width: 850px;
-  height: 40px;
-  margin-bottom: 100px;
+  width: 100%;
+  height: 100%;
+  margin-bottom: 50px;
+
   @media (max-width: 550px) {
+    margin-bottom: 50px;
+  }
+  @media (max-height: 320px) {
     margin-bottom: 50px;
   }
 }
@@ -13,7 +17,7 @@
   width: 100%;
   height: 100%;
   transform-style: preserve-3d;
-  transition: all 0.5s ease;
+  transition: all 1s ease;
 }
 
 .thefront {
