--- a/scss/contact.scss
+++ b/scss/contact.scss
@@ -117,6 +117,12 @@ p.lead {
 }
 
 @media (max-width: 550px) {
+  div.transform {
+    transition: all 0.5s ease-in-out;
+    &:hover {
+      transform: scale(1.05);
+    }
+  }
   #contact {
     &-a {
       .text-fields {
