--- a/scss/main.scss
+++ b/scss/main.scss
@@ -18,10 +18,10 @@ ul {
   list-style: none;
 }
 
-// .flip {
-//   transform: rotateX(360deg);
-//   transition: transform 1.5s;
-// }
+.flip {
+  transform: rotateX(360deg);
+  transition: transform 0.6s;
+}
 
 .container {
   max-width: 1800px;
@@ -128,8 +128,9 @@ section#home {
     text-align: center;
     padding: 2rem;
     .wrapper {
-      transform: translateY(-30%);
+      transform: translateY(-50%);
       text-align: center;
+      width: 100%;
       h1 {
         font-size: 5rem;
         padding-bottom: 1.5rem;
