--- a/scss/card.scss
+++ b/scss/card.scss
@@ -2,14 +2,21 @@
   position: relative;
   width: 100%;
   height: 100%;
-  margin-bottom: 50px;
-
-  @media (max-width: 550px) {
-    margin-bottom: 50px;
+  margin-top: 40vh;
+  margin-bottom: 90px;
+  @media (max-width: 599px) {
+    margin-bottom: 150px;
   }
-  @media (max-height: 320px) {
-    margin-bottom: 50px;
+  @media (max-width: 415px) {
+    margin-bottom: 120px;
   }
+  line-height: 1.2;
+  // @media (max-width: 550px) {
+  //   margin-bottom: 50px;
+  // }
+  // @media (max-height: 320px) {
+  //   margin-bottom: 50px;
+  // }
 }
 
 .thecard {
