--- a/scss/contact.scss
+++ b/scss/contact.scss
@@ -53,11 +53,12 @@
   }
 
   &-b {
-    background: #f4f4f4;
+    background: #ee801a;
     padding: 2rem;
     box-sizing: border-box;
     max-width: 1800px;
     margin: auto;
+    color: #fff;
     .contact-info {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
@@ -139,7 +140,7 @@ p.lead {
       div {
         margin-bottom: 1rem;
         padding-bottom: 1rem;
-        border-bottom: 1px #ee801a dotted;
+        border-bottom: 1px #333;
 
         &:last-child {
           border: none;
