--- a/scss/main.scss
+++ b/scss/main.scss
@@ -19,8 +19,8 @@ ul {
 }
 
 .flip {
-  transform: rotateX(360deg);
-  transition: transform 0.6s;
+  transform: rotateY(360deg);
+  transition: transform 0.5s ease-in-out;
 }
 
 .container {
@@ -38,7 +38,7 @@ ul {
 }
 
 @import "nav2";
-@import "card";
+
 // NavMen
 #header {
   transition: background 1.1s;
@@ -120,24 +120,39 @@ section#home {
   left: 0;
   background-color: rgba(0, 0, 0, 0.6);
   #landing-area {
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     h1 {
       font-size: 4rem;
-
-      // line-height: 1;
-      // margin-bottom: 1.5rem;
+      line-height: 1.2;
+      margin-bottom: 1.5rem;
+      transition: all 1s;
+      @media (max-width: 550px) {
+        font-size: 3rem;
+      }
+      @media (max-height: 320px) {
+        font-size: 3rem;
+      }
     }
 
-    a.btn {
+    a.l-btn {
       padding: 0.8rem 1.2rem;
       border: 3px solid #ee801a;
       font-size: 1.8rem;
       border-radius: 20px 0px 20px 0px;
       transition: all 0.8s;
       // margin-top: 15vh;
+      @media (max-width: 550px) {
+        padding: 0.5rem 0.8rem;
+        font-size: 1.4rem;
+      }
+      @media (max-height: 320px) {
+        padding: 0.5rem 0.8rem;
+        font-size: 1.4rem;
+      }
       &:hover {
         background: #ee801a;
         border-color: #fff;
@@ -221,26 +236,18 @@ section#home {
 }
 
 @media (max-width: 415px) {
-  section#home {
-    #landing-area {
-      h1 {
-        font-size: 3rem;
-      }
-    }
-
-    // a.btn {
-    //   padding: 0.3rem 0.8rem;
-    //   border: 2px solid #fff;
-    //   font-size: 1.4rem;
-    //   color: #fff;
-    //   background: #ee801a;
-    //   &:hover {
-    //     color: #ee801a;
-    //     background: none;
-    //     border-color: #ee801a;
-    //   }
-    // }
-  }
+  // a.btn {
+  //   padding: 0.3rem 0.8rem;
+  //   border: 2px solid #fff;
+  //   font-size: 1.4rem;
+  //   color: #fff;
+  //   background: #ee801a;
+  //   &:hover {
+  //     color: #ee801a;
+  //     background: none;
+  //     border-color: #ee801a;
+  //   }
+  // }
 }
 
 @media (max-width: 375px) {
@@ -251,31 +258,6 @@ section#home {
   // #nav-2 .menu-btn {
   //   top: 35px;
   // }
-}
-
-@media (max-height: 320px) {
-  section#home {
-    #landing-area {
-      h1 {
-        font-size: 3rem;
-      }
-
-      a.btn {
-        padding: 0.3rem 0.8rem;
-        border: 2px solid #fff;
-        font-size: 1.4rem;
-        color: #fff;
-        background: #ee801a;
-        margin-top: 40vh;
-        &:hover {
-          color: #ee801a;
-          background: none;
-          border-color: #ee801a;
-        }
-      }
-    }
-  }
-  //  mobile height
 }
 
 @import "about";
