--- a/scss/contact.scss
+++ b/scss/contact.scss
@@ -140,7 +140,7 @@ p.lead {
       div {
         margin-bottom: 1rem;
         padding-bottom: 1rem;
-        border-bottom: 1px #333;
+        border-bottom: 1px #333 dotted;
 
         &:last-child {
           border: none;
