--- a/scss/main.scss
+++ b/scss/main.scss
@@ -143,7 +143,8 @@ section#home {
       border: 3px solid #ee801a;
       font-size: 1.8rem;
       border-radius: 20px 0px 20px 0px;
-      transition: all 0.8s;
+      transition: all 2s;
+      opacity: 0;
       // margin-top: 15vh;
       @media (max-width: 550px) {
         padding: 0.5rem 0.8rem;
