--- a/scss/main.scss
+++ b/scss/main.scss
@@ -130,6 +130,7 @@ section#home {
       line-height: 1.2;
       margin-bottom: 1.5rem;
       transition: all 2s;
+      opacity: 0;
       @media (max-width: 550px) {
         font-size: 3rem;
       }
