--- a/scss/contact.scss
+++ b/scss/contact.scss
@@ -53,7 +53,7 @@
   }
 
   &-b {
-    background: darken(#ee801a, 10);
+    background: #666;
     padding: 2rem;
     box-sizing: border-box;
     max-width: 1800px;
