--- a/scss/about.scss
+++ b/scss/about.scss
@@ -26,6 +26,7 @@ section#about {
       margin: auto;
       h2 {
         margin-bottom: 1rem;
+
         span {
           font-size: 1.6rem;
           letter-spacing: 10px;
@@ -108,8 +109,25 @@ section#about {
       .content-width {
         h2 {
           font-size: 2.2rem;
-          margin-bottom: 20px;
+          // margin-bottom: 20px;
+          margin-right: 50%;
+          transform: translateX(50%);
+          text-align: left;
           background: #444;
+
+          span {
+            font-size: 1.6rem;
+            letter-spacing: 6px;
+            margin-left: 3px;
+          }
+        }
+        #h2-bg {
+          width: 100%;
+          background: #444;
+          margin: auto;
+          height: 60px;
+          overflow: hidden;
+          margin-bottom: 20px;
         }
         h4 {
           font-size: 1.6rem;
